Fixed issue with Signature Abilities and Force Powers displaying (#1149)
* Fix issue with Signature Abilities not showing

* Changed Force Powers to not show unless there are some

* Fix enableForcePool on adversary sheet for Force Box

* Add Force Power Conflict handling

--- a/scss/components/_forcepowers.scss
+++ b/scss/components/_forcepowers.scss
@@ -88,3 +88,10 @@
     }
   }
 }
+
+.force-conflict {
+  display: flex;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 3px;
+}
